component/PhotoCropper.styl
.PhotoCropper
  h1, h2
    margin 0 15px 15px 3px
    font-weight 300
    letter-spacing 1px
    font-size 1.3em
  h1
    margin-top 30px
    margin-left 15px
    font-size 1.7em;

  input[type=file]
    cursor pointer
    position absolute
    top -2px
    left -2px
    right -2px
    bottom -2px
    margin 0
    padding 0
    opacity 0

  .crop
    display none
    padding-bottom 48px
    &.show
      h2, .onclick-save
        opacity 1
        transition opacity .1s ease-in
      .right
        opacity 1
        right 3px
        transition all .15s ease-out .6s
    h2
      opacity 0
    .left
      display inline-block
      vertical-align top
    .right
      position absolute
      opacity 0
      right -300px
      top 33px
      z-index 9999
      display inline-block
      vertical-align top
      transition none
      .preview-wrapper
        border-radius 100%
        margin-left 10px
        border 6px solid rgb(255,255,255)
        box-shadow 0 0 1px 3px theme_color
        overflow hidden
        width 150px
        height 150px
      .upload
        margin 10px 0 0 10px
        .onclick-upload
          font-size .9em
          width 100%

  .onclick-save
    opacity 0
    cursor pointer
    position absolute
    right 1px
    left 1px
    bottom 1px
    z-index 9999
    font-weight 500
    text-align center
    cursor pointer
    overflow hidden
    width 100%

